<resources>
    <string name="app_name">Sample Calculator</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num_minus">-</string>
    <string name="num_plus">+</string>
    <string name="num_equal">=</string>
    <string name="num_multi">x</string>
    <string name="num_div">÷</string>
    <string name="num_del">Del</string>
    <string name="num_delall">C</string>
    <string name="num_dot">"\."</string>


</resources>
