<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.samplecalculator.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight=".8">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:id="@+id/textpanel"
            android:layout_weight=".1"
            android:gravity="center_vertical"
            android:textSize="70sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/op"
            android:layout_weight=".9"
            android:gravity="center"
            android:text=" "
            android:textSize="50sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight=".2"
        android:background="@color/back">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/num_equal"
            android:gravity="center"
            android:background="@drawable/blue"
            android:textSize="36sp"
            android:textColor="@android:color/white"
            android:id="@+id/btnEqual"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num_plus"
                android:layout_weight=".75"
                android:id="@+id/btnPlus"
                android:background="@drawable/blue"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num7"
                android:layout_weight="1"
                android:id="@+id/btn7"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num8"
                android:layout_weight="1"
                android:id="@+id/btn8"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num9"
                android:layout_weight="1"
                android:id="@+id/btn9"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num_minus"
                android:layout_weight="1"
                android:id="@+id/btnMinus"
                android:background="@drawable/blue"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num4"
                android:layout_weight="1"
                android:id="@+id/btn4"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num5"
                android:layout_weight="1"
                android:id="@+id/btn5"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num6"
                android:layout_weight="1"
                android:id="@+id/btn6"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num_multi"
                android:layout_weight="1"
                android:id="@+id/btnMult"
                android:background="@drawable/blue"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num1"
                android:layout_weight="1"
                android:id="@+id/btn1"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num2"
                android:layout_weight="1"
                android:id="@+id/btn2"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num3"
                android:layout_weight="1"
                android:id="@+id/btn3"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num_div"
                android:layout_weight="1"
                android:id="@+id/btnDiv"
                android:background="@drawable/blue"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num_delall"
                android:layout_weight="1"
                android:id="@+id/btnClearall"
                android:background="@drawable/black"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num0"
                android:layout_weight="1"
                android:id="@+id/btn0"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="\."
                android:layout_weight="1"
                android:id="@+id/buttondot"
                android:background="@drawable/white"
                android:textSize="36sp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/num_del"
                android:layout_weight="1"
                android:id="@+id/btnDel"
                android:background="@drawable/black"
                android:textSize="36sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>



        </LinearLayout>


</LinearLayout>
